--- a/minglrconfig.sample
+++ b/minglrconfig.sample
@@ -16,3 +16,22 @@
 	task_state_3 = Dev In Progress > Story from Dev in Progress to Dev Complete
 	story_checkout = story_state_1
 	task_checkout = story_state_2
+
+# Mingle Project Templates
+# [blank]
+# 	url = http://localhost:9090/projects/blank
+# 
+# [agilehybrid]
+# 	url = http://localhost:9090/projects/agilehybrid
+# 	status_property = cp_status
+# 
+# [scrum]
+# 	url = http://localhost:9090/projects/scrum
+# 	status_property = cp_status
+# 
+# [storytracker]
+# 	url = http://localhost:9090/projects/storytracker
+# 	status_property = cp_status
+# 
+# [xp]
+# 	url = http://localhost:9090/projects/xp
